--- a/css/page.less
+++ b/css/page.less
@@ -2,6 +2,12 @@
     .overlay-content();
     padding-left: 0;
     padding-top: 0;
+
+    @media (max-width: @screen-xs-max) {
+        & {
+            left: 0;
+        }
+    }
 }
 
 .page-view #page {
@@ -10,12 +16,6 @@
 
 .page-view {
     .interface-hidden-xs();
-}
-
-@media (max-width: @screen-xs-max) {
-    #page {
-        left: 0;
-    }
 }
 
 .page {
